[package]
authors = ["PureStake"]
edition = "2021"
name = "pallet-crowdloan-rewards"
version = '0.6.0'
description = "Reward citizens who participated in a crowdloan to acquire a parachain slot o nthe backing relay chain."

[dependencies]
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc"], optional = true }
parity-scale-codec = { version = "3.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false, optional = true }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-types = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-utility = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-trie = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false, optional = true }

orml-tokens = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[dev-dependencies]
orml-traits = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[features]
default = ["std"]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "mangata-types/std",
    "orml-tokens/std",
    "pallet-utility/std",
    "pallet-vesting-mangata/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "ed25519-dalek",
    "frame-benchmarking",
    "sp-runtime/runtime-benchmarks",
    "sp-trie",
]

try-runtime = ["frame-system/try-runtime", "frame-support/try-runtime", "pallet-vesting-mangata/try-runtime"]

# patch generated by ./scripts/dev_manifest.sh
[patch."https://github.com/mangata-finance/polkadot-sdk"]
pallet-vesting-mangata = { path = "../polkadot-sdk/substrate/frame/vesting-mangata" }
frame-system = { path = "../polkadot-sdk/substrate/frame/system" }
frame-support = { path = "../polkadot-sdk/substrate/frame/support" }
frame-support-procedural = { path = "../polkadot-sdk/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "../polkadot-sdk/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "../polkadot-sdk/substrate/frame/support/procedural/tools/derive" }
frame-benchmarking = { path = "../polkadot-sdk/substrate/frame/benchmarking" }
pallet-utility = { path = "../polkadot-sdk/substrate/frame/utility" }
sp-database = { path = "../polkadot-sdk/substrate/primitives/database" }
sp-runtime-interface = { path = "../polkadot-sdk/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "../polkadot-sdk/substrate/primitives/runtime-interface/proc-macro" }
sp-consensus = { path = "../polkadot-sdk/substrate/primitives/consensus/common" }
sp-tracing = { path = "../polkadot-sdk/substrate/primitives/tracing" }
sp-ver = { path = "../polkadot-sdk/substrate/primitives/ver" }
sp-core = { path = "../polkadot-sdk/substrate/primitives/core" }
sp-core-hashing = { path = "../polkadot-sdk/substrate/primitives/core/hashing" }
sp-core-hashing-proc-macro = { path = "../polkadot-sdk/substrate/primitives/core/hashing/proc-macro" }
sp-state-machine = { path = "../polkadot-sdk/substrate/primitives/state-machine" }
sp-keystore = { path = "../polkadot-sdk/substrate/primitives/keystore" }
sp-metadata-ir = { path = "../polkadot-sdk/substrate/primitives/metadata-ir" }
sp-weights = { path = "../polkadot-sdk/substrate/primitives/weights" }
sp-io = { path = "../polkadot-sdk/substrate/primitives/io" }
sp-runtime = { path = "../polkadot-sdk/substrate/primitives/runtime" }
sp-inherents = { path = "../polkadot-sdk/substrate/primitives/inherents" }
sp-std = { path = "../polkadot-sdk/substrate/primitives/std" }
sp-storage = { path = "../polkadot-sdk/substrate/primitives/storage" }
sp-panic-handler = { path = "../polkadot-sdk/substrate/primitives/panic-handler" }
sp-debug-derive = { path = "../polkadot-sdk/substrate/primitives/debug-derive" }
sp-blockchain = { path = "../polkadot-sdk/substrate/primitives/blockchain" }
sp-externalities = { path = "../polkadot-sdk/substrate/primitives/externalities" }
sp-trie = { path = "../polkadot-sdk/substrate/primitives/trie" }
mangata-types = { path = "../polkadot-sdk/substrate/primitives/mangata-types" }
sp-version = { path = "../polkadot-sdk/substrate/primitives/version" }
sp-version-proc-macro = { path = "../polkadot-sdk/substrate/primitives/version/proc-macro" }
sp-block-builder = { path = "../polkadot-sdk/substrate/primitives/block-builder" }
sp-staking = { path = "../polkadot-sdk/substrate/primitives/staking" }
sp-wasm-interface = { path = "../polkadot-sdk/substrate/primitives/wasm-interface" }
extrinsic-shuffler = { path = "../polkadot-sdk/substrate/primitives/shuffler" }
sp-arithmetic = { path = "../polkadot-sdk/substrate/primitives/arithmetic" }
sp-api = { path = "../polkadot-sdk/substrate/primitives/api" }
sp-api-proc-macro = { path = "../polkadot-sdk/substrate/primitives/api/proc-macro" }
sp-application-crypto = { path = "../polkadot-sdk/substrate/primitives/application-crypto" }
ver-api = { path = "../polkadot-sdk/substrate/primitives/ver-api" }
sp-genesis-builder = { path = "../polkadot-sdk/substrate/primitives/genesis-builder" }
staging-xcm = { path = "../polkadot-sdk/polkadot/xcm" }
xcm-procedural = { path = "../polkadot-sdk/polkadot/xcm/procedural" }

# patch generated by ./scripts/dev_manifest.sh
[patch."https://github.com/mangata-finance/open-runtime-module-library"]
orml-traits = { path = "../open-runtime-module-library/traits" }
orml-utilities = { path = "../open-runtime-module-library/utilities" }
orml-tokens = { path = "../open-runtime-module-library/tokens" }
